Improving error messages when an annotation processor crashes.
 - clear class cache on AP failure
 - use printStackTrace(writer) to format exception
 - add jar location, AP name and javac version to exception message
 - add update advice message since it is a common way to resolve
   compatibility issues

Co-authored-by: Michael Bien <mbien42@gmail.com>